--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<head><link href="/build/main-08557ad28f48239700b536903cbb569c.css" rel="stylesheet"><link href="/build/main-5f1157c44d06ddf4351ff1d844e724ee.css" rel="stylesheet"></head>doctype html
-html
-  head
-    title
-      | Musical Lattice
-  body
-    #root
-<script type="text/javascript" src="/build/main.9f96b8846e4bf30f0b5c.js"></script>
+<!DOCTYPE html><html><head><title>Musical Lattice</title><link href="/build/main-08557ad28f48239700b536903cbb569c.css" rel="stylesheet"><link href="/build/main-5f1157c44d06ddf4351ff1d844e724ee.css" rel="stylesheet"></head><body><div id="root"></div><script type="text/javascript" src="/build/main.9f96b8846e4bf30f0b5c.js"></script></body></html>
